--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
+  "framer-motion": "^10.12.16",
     "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/react": "^19.1.10",
