--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,11 @@
     "test": "vitest"
   },
   "dependencies": {
-  "@mui/material": "^5.15.21",
-  "@mui/icons-material": "^5.15.21",
-  "@emotion/react": "^11.13.3",
-  "@emotion/styled": "^11.13.0",
-    "@tailwindcss/vite": "^4.1.12",
-    "lucide-react": "^0.539.0",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0",
-    "react-router-dom": "^6.30.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -47,6 +42,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-table": "^8.11.8",
     "axios": "^1.10.0",
@@ -54,8 +50,12 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.539.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-router-dom": "^6.30.1",
     "recharts": "^3.1.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
@@ -64,32 +64,32 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-  "node-fetch": "^3.3.2",
-    "framer-motion": "^10.12.16",
     "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.12",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.6.0",
+    "@types/date-fns": "^2.5.3",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@types/date-fns": "^2.5.3",
     "@types/recharts": "^1.8.29",
     "@types/testing-library__jest-dom": "^6.0.0",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/user-event": "^14.6.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "cors": "^2.8.5",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "express": "^4.18.2",
+    "framer-motion": "^10.12.16",
     "globals": "^16.3.0",
     "jsdom": "^25.0.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vitest": "^2.0.5",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   }
 }
